// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PlainTextVerse Component should match the old snapshot 1`] = `
<DocumentFragment>
  <span
    class="align-left"
    data-verseid="1"
  >
    <sup
      data-verseid="1"
    >
       1 
    </sup>
    <div
      id="mockIcons"
    >
      mockIcons
    </div>
    <span
      data-verseid="1"
    >
      In the beginning God created the heavens and the earth.
    </span>
  </span>
</DocumentFragment>
`;

exports[`PlainTextVerse Component should match the old snapshot when oneVerse option is true 1`] = `
<DocumentFragment>
  <span
    class="align-left"
    data-verseid="1"
  >
    <br />
    <sup
      data-verseid="1"
    >
       1 
    </sup>
    <div
      id="mockIcons"
    >
      mockIcons
    </div>
    <span
      data-verseid="1"
    >
      In the beginning God created the heavens and the earth.
    </span>
  </span>
</DocumentFragment>
`;
